--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="/css/media.css">
     <link rel="stylesheet" href="/css/project-background.css">
     <link rel="stylesheet" href="/css/for-parents.css">
+    <link rel="stylesheet" href="/css/workshops-profile.css">
+
+
 </head>
 <body>
     <header>
@@ -63,11 +66,11 @@
         </div>  
     </header>
     
-    <section class="hero">
-        <div class="container">
-           <div class="main-message"></div> 
-        </div>
-    </section>       
+    <section>
+        <div class="hero">
+            <img class="hamburger" src="images/dzieci.jpg" alt="">
+        </div>   
+    </section>    
 
     <section class="project-background">
         <div class="title-heading">
@@ -148,10 +151,22 @@
             <h3>Profil warsztatów</h3>
         </div>
         <div class="container-space">
-            <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
+            <div class="left-text">
+                <p>Cel:</p>
+                <p>Grupa docelowa:</p>
+                <p>Czas trwania projektu:</p>
+                <p>Regulamin:</p>
+            </div>
+            <div class="right-text">
+                <p>Lorem ipsum dolor sit amet</p>
+                <p>Lorem ipsum dolor sit amet</p>
+                <p>Lorem ipsum dolor sit amet</p>
+                <p><span class="bold-elem-click">Kliknij Tutaj</span></p>
+            </div>
+            <!-- <p><span class="bold-elem">Cel:</span> Lorem ipsum dolor sit amet</p>
             <p><span class="bold-elem">Grupa docelowa:</span> Lorem ipsum dolor sit amet</p>
             <p><span class="bold-elem">Czas trwania projektu:</span> Lorem ipsum dolor sit amet</p>
-            <p><span class="bold-elem">Regulamin:</span> <span class="bold-elem-click">Kliknij Tutaj</span></p>
+            <p><span class="bold-elem">Regulamin:</span> <span class="bold-elem-click">Kliknij Tutaj</span></p> -->
         </div>
         <div class="container-arrow">
             <div class="arrow" onclick="gotoBottom()"></div>
@@ -254,6 +269,13 @@
         <img src= "images/foot.png" alt="">
         <div class="footer">.</div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenLite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TimelineMax.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script> -->
+
+    <script type="text/javascript" src="/js/app.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
