html css website - final adjustments

--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zielona Kraina</title>
     <!--Ion Icons-->
@@ -83,11 +82,8 @@
                 <h3 class="fancy">Tło projektu</h3>
             </div>
             <div class="container-space">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a,
-                    scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus.
-                    Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel
-                    hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci.
-                    Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus.
+                    Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p>
             </div>
 
             <div class="container-arrow">
@@ -107,12 +103,11 @@
                 <div class="wrapper-news container-space">
                     <div class="wrapper">
                         <div class="news-images">
-                            <img src="./images/hiking.jpg" alt="">
+                            <img src="./images/zielona.jpg" alt="">
                         </div>
                         <div class="news-descr">
-                            <h1>Star Gazing</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.</p>
+                            <h1>Zielona Kraina</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <div class="container-arrow-left">
                                 <div class="arrow" onclick="gotoBottom()"></div>
                             </div>
@@ -120,12 +115,11 @@
                     </div>
                     <div class="wrapper">
                         <div class="news-images">
-                            <img src="./images/hiking.jpg" alt="">
+                            <img src="./images/zielona.jpg" alt="">
                         </div>
                         <div class="news-descr">
-                            <h1>Star Gazing</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.</p>
+                            <h1>Zielona Kraina</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <div class="container-arrow-left">
                                 <div class="arrow" onclick="gotoBottom()"></div>
                             </div>
@@ -133,12 +127,11 @@
                     </div>
                     <div class="wrapper">
                         <div class="news-images">
-                            <img src="./images/hiking.jpg" alt="">
+                            <img src="./images/zielona.jpg" alt="">
                         </div>
                         <div class="news-descr">
-                            <h1>Star Gazing</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.</p>
+                            <h1>Zielona Kraina</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <div class="container-arrow-left">
                                 <div class="arrow" onclick="gotoBottom()"></div>
                             </div>
@@ -146,12 +139,11 @@
                     </div>
                     <div class="wrapper">
                         <div class="news-images">
-                            <img src="./images/hiking.jpg" alt="">
+                            <img src="./images/zielona.jpg" alt="">
                         </div>
                         <div class="news-descr">
-                            <h1>Star gazing</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit.</p>
+                            <h1>Zielona Kraina</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <div class="container-arrow-left">
                                 <div class="arrow" onclick="gotoBottom()"></div>
                             </div>
@@ -178,9 +170,7 @@
                     <p class="workshops-item-title">Grupa docelowa:</p>
                     <p class="workshops-item-descr">Lorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
                     <p class="workshops-item-title">Czas trwania projektu:</p>
-                    <p class="workshops-item-descr">Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum
-                        dolor
-                        sit amet</p>
+                    <p class="workshops-item-descr">Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
                     <p class="workshops-item-title">Regulamin:</p>
                     <p><a href="#" class="bold-elem-click">Kliknij Tutaj</a></p>
                 </div>
@@ -198,22 +188,22 @@
             </div>
 
             <div class="gallery">
-                <div class="gallery-img"><img src="./images/hiking.jpg" alt=""><a href="#" class="image-link">text
+                <div class="gallery-img"><img src="./images/zielona.jpg" alt=""><a href="#" class="image-link">text
                         example
                         lorem ipsum</a></div>
-                <div class="gallery-img"><img src="./images/hiking.jpg" alt=""><a href="#" class="image-link">text
+                <div class="gallery-img"><img src="./images/zielona.jpg" alt=""><a href="#" class="image-link">text
                         example
                         lorem ipsum</a></div>
-                <div class="gallery-img"><img src="./images/hiking.jpg" alt=""><a href="#" class="image-link">text
+                <div class="gallery-img"><img src="./images/zielona.jpg" alt=""><a href="#" class="image-link">text
                         example
                         lorem ipsum</a></div>
-                <div class="gallery-img"><img src="./images/hiking.jpg" alt=""><a href="#" class="image-link">text
+                <div class="gallery-img"><img src="./images/zielona.jpg" alt=""><a href="#" class="image-link">text
                         example
                         lorem ipsum</a></div>
-                <div class="gallery-img"><img src="./images/hiking.jpg" alt=""><a href="#" class="image-link">text
+                <div class="gallery-img"><img src="./images/zielona.jpg" alt=""><a href="#" class="image-link">text
                         example
                         lorem ipsum</a></div>
-                <div class="gallery-img"><img src="./images/hiking.jpg" alt=""><a href="#" class="image-link">text
+                <div class="gallery-img"><img src="./images/zielona.jpg" alt=""><a href="#" class="image-link">text
                         example
                         lorem ipsum</a></div>
             </div>
