html css website - nav icon for mobile menu changed

--- a/Project1 - responsive website/index.html
+++ b/Project1 - responsive website/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="./css/arrow.css">
     <link rel="stylesheet" href="./css/navigation.css">
     <link rel="stylesheet" href="./css/hero.css">
-    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/for-parents.css">
     <link rel="stylesheet" href="./css/workshops-profile.css">
     <!-- animations -->
@@ -37,6 +36,10 @@
         <div class="menu-icons icon-close" id="close">
             <i class="icon ion-md-close"></i>
         </div>
+        <div class="menu-icons icon-close" id="menu">
+            <i class="icon ion-md-apps"></i>
+        </div>
+
         <div class="nav creme-background">
             <div id="navigation" class="nav-list">
                 <div class="nav-brand">
@@ -300,7 +303,6 @@
     <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript" src="./js/test-animation.js"></script>
     <script type="text/javascript" src="./js/slider.js"></script>
-    <script type="text/javascript" src="./js/rectangle.js"></script>
 </body>
 
 </html>
